Added the validation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<br>
 			</div>
 			<div class="inputTex">
-				<input type="number" min="0" max="9" name="LastName" required="">
+				<input type="number" name="LastName" required="">
 				<label>Phone Number:</label>
 			</div>
 			
