--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<label>LastName:</label>
 			</div>
 			<div class="inputTex">
-				<input type="email" name="LastName" required="">
+				<input type="text" name="LastName" required="">
 				<label>Email ID:</label>
 			</div>
 			<div class="inputTex">
@@ -47,7 +47,7 @@
 	<div class="login-box">
 		<h2>Login</h2>
 		<div class="inputTex">
-				<input type="email" name="LastName" required="">
+				<input type="text" name="LastName" required="">
 				<label>Email ID:</label>
 			</div>
 			<div class="inputTex">
